# bgfx_android_nativeActivity

./: README.md
bgfx/: CMakeLists.txt
bimg/: CMakeLists.txt
bx/: CMakeLists.txt
native-activity/app/src/main/cpp/: CMakeLists.txt  main.cpp
